<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_instalment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prototype.isbi.isbiprototype1.InstalmentActivity"
    android:background="@drawable/pop_white">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:contentDescription="back_ground_image"
        android:src="@drawable/bg_3_small"
        android:scaleType="centerCrop"
        android:background="@drawable/pop_see_though"
        android:alpha="0.4"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/pop_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:textColorHint="@color/holoBlueBright"
                    android:id="@+id/total_widget">

                    <EditText
                        android:id="@+id/total"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/hint_Total"
                        android:textStyle="italic"
                        android:inputType="number"
                        android:padding="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="20dp"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_money"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="2"
                android:id="@+id/fee_ll">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:textColorHint="@color/holoBlueBright">
                    <EditText
                        android:id="@+id/fee"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="italic"
                        android:hint="@string/hint_fee"
                        android:inputType="number"
                        android:padding="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="20dp"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/date_ll">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColorHint="@color/holoBlueBright">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/actual_date_text"
                        android:text="@string/date"
                        android:textColor="@color/holoBlueBright"/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:onClick="setDate"
                        android:textColor="@android:color/black"
                        android:text="@string/date_selected"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btn_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:onClick="setDate"
                            android:text="@string/date_button_set"
                            android:background="@drawable/button_small"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:paddingTop="@dimen/buttons_top_padding"
                android:paddingBottom="@dimen/buttons_top_padding"
                android:background="@drawable/border_blue_bright"/>
            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <!-- android:layout_weight="2" Next Button android:layout_weight="1" -->
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/btn_move"
                        android:textSize="@dimen/activity_font_size_buttons"
                        android:id="@+id/btn_add"
                        android:background="@drawable/button"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <!-- Back Button -->
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/btn_exit"
                        android:textSize="@dimen/activity_font_size_buttons"
                        android:id="@+id/btn_exit"
                        android:background="@drawable/button"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>