<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_white"
    android:elevation="400dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/personal_details_form"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="8">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center">

                <AutoCompleteTextView
                    android:id="@+id/product"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/hint_product">
                </AutoCompleteTextView>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:weightSum="8"
                android:layout_gravity="center"
                android:gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/holoBlueDarker">

                    <!-- Get number -->

                    <EditText
                        android:id="@+id/number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/holoBlueDarker"
                        android:gravity="center"
                        android:textStyle="italic"
                        android:hint="@string/hint_number"
                        android:inputType="number"
                        android:padding="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="20dp"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:id="@+id/unit"></Spinner>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_each"
                    android:id="@+id/textView"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/holoBlueDarker"
                    android:textSize="@dimen/activity_font_size_headings"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/holoBlueDarker">
                    <!-- Get ID or PP No. -->
                    <EditText
                        android:id="@+id/cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="italic"
                        android:hint="@string/hint_price"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/holoBlueDarker"
                        android:inputType="number"
                        android:padding="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="20dp"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textColorHint="@color/holoBlueDarker">

                <EditText
                    android:id="@+id/total"
                    android:elevation="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/holoBlueDarker"
                    android:textStyle="italic"
                    android:hint="@string/hint_Total"
                    android:inputType="number"
                    android:padding="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingRight="10dp">

                    <!-- Next Button android:weightSum="2"  android:layout_weight="1"-->
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center"
                        android:textColor="@android:color/black"
                        android:text="@string/btn_add"
                        android:textSize="@dimen/activity_font_size_buttons"
                        android:id="@+id/btn_add"
                        android:background="@drawable/button"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="10dp">

                    <!-- Back Button android:layout_weight="1"-->
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/btn_exit"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/activity_font_size_buttons"
                        android:id="@+id/btn_exit"
                        android:background="@drawable/button"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>